fixed alignment of stories, added nav bar, added purple logo image

--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,6 @@
 html {
 	height: 100%;
   overflow-x: hidden;
-
-  /*padding: 0;*/
 }
 
 body {
@@ -82,7 +80,6 @@ h2 {
 h3 {
 	font-size: 32px;
 	font-weight: 600;
-	/*margin-bottom: 15px;*/
   margin: 15px 0;
 	line-height: 1.5;
 }
@@ -185,7 +182,6 @@ button {
   bottom: -30px;
   width: 100%;
   height: 80px;
-  /*background: #343653;*/
   background: #3A3F5E;
   -webkit-transform: skewY(2.5deg);
   -moz-transform: skewY(2.5deg);
@@ -273,6 +269,28 @@ button {
 }
 
 
+/* NAVIGATION BAR */
+
+.navbar {
+  padding-top: 2px;
+  background-color: rgba(74, 78, 110, .95);
+}
+
+#nav__logo {
+  margin-top: 5px;
+  padding-bottom: 0;
+}
+
+.navbar a {
+  color: #D0D2DF;
+}
+
+.navbar-custom .nav li a:hover {
+    background-color: transparent;
+    color: white;
+}
+
+
 /* COVER */
 
 .cover {
@@ -286,10 +304,9 @@ button {
   text-align: center;
 }
 
-.base-canvas {
-  /*top: 0px;*/
+/*.base-canvas {
   display: inline-block;
-}
+}*/
 
 
 /* STORIES */
@@ -300,12 +317,18 @@ button {
   vertical-align: top;
 }
 
+.story {
+  -ms-transform: translate(0px, -60px);
+  -webkit-transform: translate(0px, -60px);
+  transform: translate(0px, -60px);
+}
+
 .story p {
   color: #2E3044;
   margin-bottom: 0px;
-  -ms-transform: translate(0px, -40px); /* IE 9 */
-  -webkit-transform: translate(0px, -40px); /* Safari */
-  transform: translate(0px, -40px);
+  -ms-transform: translate(0px, 100px);
+  -webkit-transform: translate(0px, 100px);
+  transform: translate(0px, 100px);
 }
 
 p.school {
@@ -319,21 +342,14 @@ p.name {
   font-weight: 600;
 }
 
-#pic1, #pic2, #pic3 {
-  display: inline-block;
-  width: 40%;
-}
-
 #story1, #story2, #story3 {
   padding: 0px 50px;
   width: 60%;
   display: inline-block;
 }
 
-
 img.story__photo {
   max-height: 250px;
-  margin: 35px 0;
   border: 10px solid white;
   border-bottom: 50px solid white;
   -webkit-transition: -webkit-transform .15s linear;
@@ -341,14 +357,10 @@ img.story__photo {
   -moz-box-shadow: 0 3px 6px rgba(0,0,0,.20);
 }
 
-#story3 {
-  margin-top: 75px;
-}
-
 .pic3 {
-  -ms-transform: translate(0px, -60px);
-  -webkit-transform: translate(0px, -60px);
-  transform: translate(0px, -60px);
+  -ms-transform: translate(0px, -75px);
+  -webkit-transform: translate(0px, -75px);
+  transform: translate(0px, -75px);
 }
 
 
@@ -644,6 +656,10 @@ table, th, td {
     width: 80vw;
   }
 
+  #cover__logo {
+    display: none;
+  }
+
   .cover {
     height: 90vh;
     padding: 0 30px 0 30px;
@@ -675,6 +691,7 @@ table, th, td {
 	}
 }
 
+
 @media all and (max-width: 600px) {
 	h1 {
     font-size: 48px;
@@ -689,9 +706,34 @@ table, th, td {
 		font-size: 20px;
 	}
 
+  .navbar {
+    display: none;
+  }
+
+  .cover__logo.logo__image {
+    display: inline;
+  }
+
 	.cover__headline {
     margin-bottom: 10px;
 	}
+
+  .story {
+    -ms-transform: translate(0px, 0px); /* IE 9 */
+    -webkit-transform: translate(0px, 0px); /* Safari */
+    transform: translate(0px, 0px);
+  }
+
+  .story p {
+    width: 85%;
+    -ms-transform: translate(0px, 0px); /* IE 9 */
+    -webkit-transform: translate(0px, 0px); /* Safari */
+    transform: translate(0px, 0px);
+  }
+
+  .pic2, .pic3 {
+    margin-top: 60px;
+  }
 
   .pic3 {
     -ms-transform: translate(0px, 0px);
